--- a/app/src/main/res/layout/activity_train_travel.xml
+++ b/app/src/main/res/layout/activity_train_travel.xml
@@ -38,7 +38,7 @@
                     android:layout_width="120px"
                     android:layout_height="120px"
                     android:layout_gravity="center"
-                    android:background="@mipmap/banner_icon_1" />
+                    android:background="@mipmap/ly_icon1" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -60,7 +60,7 @@
                     android:layout_width="120px"
                     android:layout_height="120px"
                     android:layout_gravity="center"
-                    android:background="@mipmap/banner_icon_2" />
+                    android:background="@mipmap/ly_icon2" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -83,7 +83,7 @@
                     android:layout_width="120px"
                     android:layout_height="120px"
                     android:layout_gravity="center"
-                    android:background="@mipmap/banner_icon_3" />
+                    android:background="@mipmap/ly_icon3" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -105,7 +105,7 @@
                     android:layout_width="120px"
                     android:layout_height="120px"
                     android:layout_gravity="center"
-                    android:background="@mipmap/banner_icon_4" />
+                    android:background="@mipmap/ly_icon4" />
 
                 <TextView
                     android:layout_width="wrap_content"
