--- a/app/src/main/res/layout/fragmengt_film02.xml
+++ b/app/src/main/res/layout/fragmengt_film02.xml
@@ -17,7 +17,83 @@
             android:background="@android:color/white"
             android:orientation="vertical">
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/lineBlackColor" />
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="30px">
+
+                <TextView
+                    android:id="@+id/tvygptj"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:text="预告片推荐"
+                    android:textSize="16sp" />
+
+                <View
+                    android:layout_width="wrap_content"
+                    android:layout_height="3dp"
+                    android:layout_alignLeft="@+id/tvygptj"
+                    android:layout_alignRight="@+id/tvygptj"
+                    android:layout_below="@+id/tvygptj"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="20px"
+                    android:background="@color/lineBlackColor" />
+            </RelativeLayout>
+
+            <com.crhsi.ylkjcjq.views.HorizontalListView
+                android:id="@+id/mHorizontalListView"
+                android:layout_width="match_parent"
+                android:layout_height="450px" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginBottom="20px"
+                android:layout_marginTop="20px"
+                android:background="@color/lineBlackColor" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="30px">
+
+                <TextView
+                    android:id="@+id/tvygptj2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:text="最受期待的电影"
+                    android:textSize="16sp" />
+
+                <View
+                    android:layout_width="wrap_content"
+                    android:layout_height="3dp"
+                    android:layout_alignLeft="@+id/tvygptj2"
+                    android:layout_alignRight="@+id/tvygptj2"
+                    android:layout_below="@+id/tvygptj2"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="20px"
+                    android:background="@color/lineBlackColor" />
+            </RelativeLayout>
+
+            <com.crhsi.ylkjcjq.views.MyGridView
+                android:id="@+id/mGridView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:columnWidth="90dp"
+                android:gravity="center"
+                android:horizontalSpacing="10dp"
+                android:listSelector="@android:color/transparent"
+                android:numColumns="2"
+                android:stretchMode="columnWidth"
+                android:verticalSpacing="10dp" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
