--- a/app/src/main/res/layout/fragmengt_film03.xml
+++ b/app/src/main/res/layout/fragmengt_film03.xml
@@ -17,7 +17,115 @@
             android:background="@android:color/white"
             android:orientation="vertical">
 
-          
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/lineBlackColor" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="30px">
+
+                <TextView
+                    android:id="@+id/tvygptj"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:text="精彩专题"
+                    android:textSize="16sp" />
+
+                <View
+                    android:layout_width="wrap_content"
+                    android:layout_height="3dp"
+                    android:layout_alignLeft="@+id/tvygptj"
+                    android:layout_alignRight="@+id/tvygptj"
+                    android:layout_below="@+id/tvygptj"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="20px"
+                    android:background="@color/lineBlackColor" />
+            </RelativeLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="700px"
+                android:background="@mipmap/film_t_01" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="30px">
+
+                <TextView
+                    android:id="@+id/jczt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:text="查看全部专题"
+                    android:textSize="16sp" />
+
+                <View
+                    android:layout_width="20px"
+                    android:layout_height="35px"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="20px"
+                    android:layout_toRightOf="@+id/jczt"
+                    android:background="@mipmap/icon_more" />
+            </RelativeLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/lineBlackColor" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="30px">
+
+                <TextView
+                    android:id="@+id/rmwz"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:text="热门文章"
+                    android:textSize="16sp" />
+
+                <View
+                    android:layout_width="wrap_content"
+                    android:layout_height="3dp"
+                    android:layout_alignLeft="@+id/rmwz"
+                    android:layout_alignRight="@+id/rmwz"
+                    android:layout_below="@+id/rmwz"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="20px"
+                    android:background="@color/lineBlackColor" />
+            </RelativeLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/lineBlackColor" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="400px"
+                android:background="@mipmap/film_t_02" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="400px"
+                android:background="@mipmap/film_t_02" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="400px"
+                android:background="@mipmap/film_t_02" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="400px"
+                android:background="@mipmap/film_t_02" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
