--- a/app/src/main/res/layout/fragmengt_film04.xml
+++ b/app/src/main/res/layout/fragmengt_film04.xml
@@ -6,18 +6,39 @@
     android:background="@android:color/white"
     android:orientation="vertical">
 
-    <ScrollView
+    <View
+        android:id="@+id/banner"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="780px"
+        android:background="@mipmap/film_banner2" />
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/white"
-            android:orientation="vertical">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="30px">
 
-          
-        </LinearLayout>
-    </ScrollView>
+        <TextView
+            android:id="@+id/tvygptj"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="爱情电影"
+            android:textSize="16sp" />
+
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="3dp"
+            android:layout_alignLeft="@+id/tvygptj"
+            android:layout_alignRight="@+id/tvygptj"
+            android:layout_below="@+id/tvygptj"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20px"
+            android:background="@color/lineBlackColor" />
+    </RelativeLayout>
+
+    <com.crhsi.ylkjcjq.views.HorizontalListView
+        android:id="@+id/mHorizontalListView"
+        android:layout_width="match_parent"
+        android:layout_marginTop="20px"
+        android:layout_height="match_parent" />
 </LinearLayout>
