--- a/app/src/main/res/layout/fragment_main1.xml
+++ b/app/src/main/res/layout/fragment_main1.xml
@@ -748,6 +748,7 @@
             </RelativeLayout>
 
             <View
+                android:id="@+id/gaotieyuanxian"
                 android:layout_width="match_parent"
                 android:layout_height="660px"
                 android:layout_margin="20px"
