--- a/app/src/main/res/layout/activity_nearby_search.xml
+++ b/app/src/main/res/layout/activity_nearby_search.xml
@@ -57,6 +57,8 @@
             android:layout_height="100px">
 
             <LinearLayout
+                android:id="@+id/tab1"
+                android:onClick="onClick"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
@@ -71,6 +73,7 @@
                     android:textSize="38px" />
 
                 <View
+                    android:id="@+id/tab1_line"
                     android:layout_width="100px"
                     android:layout_height="2dp"
                     android:layout_gravity="center"
@@ -79,6 +82,8 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/tab2"
+                android:onClick="onClick"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
@@ -93,6 +98,7 @@
                     android:textSize="38px" />
 
                 <View
+                    android:id="@+id/tab2_line"
                     android:layout_width="100px"
                     android:layout_height="2dp"
                     android:layout_gravity="center"
@@ -102,6 +108,8 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/tab3"
+                android:onClick="onClick"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -109,6 +117,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tvtab3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="top"
@@ -127,6 +136,8 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/tab4"
+                android:onClick="onClick"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -134,6 +145,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tvtab4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="top"
@@ -165,48 +177,48 @@
                     android:id="@+id/dibioazhilv"
                     android:onClick="onClick"
                     android:layout_width="match_parent"
-                    android:layout_height="1000px"
+                    android:layout_height="1050px"
                     android:background="@mipmap/lvyouicon" />
 
                 <ImageView
                     android:id="@+id/dibioazhilv1"
                     android:layout_width="match_parent"
-                    android:layout_height="1000px"
+                    android:layout_height="1050px"
                     android:layout_marginTop="70px"
-                    android:background="@mipmap/lvyouicon" />
+                    android:background="@mipmap/lvyouicon2" />
 
                 <ImageView
                     android:id="@+id/dibioazhilv2"
                     android:layout_width="match_parent"
-                    android:layout_height="1000px"
+                    android:layout_height="1050px"
                     android:layout_marginTop="70px"
                     android:background="@mipmap/lvyouicon" />
 
                 <ImageView
                     android:id="@+id/dibioazhilv3"
                     android:layout_width="match_parent"
-                    android:layout_height="1000px"
+                    android:layout_height="1050px"
                     android:layout_marginTop="70px"
-                    android:background="@mipmap/lvyouicon" />
+                    android:background="@mipmap/lvyouicon2" />
 
                 <ImageView
                     android:id="@+id/dibioazhilv4"
                     android:layout_width="match_parent"
-                    android:layout_height="1000px"
+                    android:layout_height="1050px"
                     android:layout_marginTop="70px"
                     android:background="@mipmap/lvyouicon" />
 
                 <ImageView
                     android:id="@+id/dibioazhilv5"
                     android:layout_width="match_parent"
-                    android:layout_height="1000px"
+                    android:layout_height="1050px"
                     android:layout_marginTop="70px"
-                    android:background="@mipmap/lvyouicon" />
+                    android:background="@mipmap/lvyouicon2" />
 
                 <ImageView
                     android:id="@+id/dibioazhilv6"
                     android:layout_width="match_parent"
-                    android:layout_height="1000px"
+                    android:layout_height="1050px"
                     android:layout_marginTop="70px"
                     android:background="@mipmap/lvyouicon" />
             </LinearLayout>
