--- a/app/src/main/res/layout/activity_train_travel.xml
+++ b/app/src/main/res/layout/activity_train_travel.xml
@@ -9,7 +9,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
 
         <include layout="@layout/title_bar" />
@@ -251,6 +253,8 @@
                 </RelativeLayout>
 
                 <TextView
+                    android:id="@+id/searchBtn"
+                    android:onClick="onClick"
                     android:layout_width="match_parent"
                     android:layout_height="90px"
                     android:layout_margin="30px"
